--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/40_synthetic_chemistry.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/40_synthetic_chemistry.mdx
@@ -11,58 +11,58 @@ import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
 
 :::info Summary:
 
-The main goal of a synthetic organic or inorganic chemist is to synthesise desired compounds. Established methods are applied, or new synthetic methods are developed. A typical workflow starts with the planning of the experiments and methods. These are then conducted and research data as well as accompanying metadata are collected along the way. Once the final product is obtained, it is analysed with suitable methods to identify properties of the synthesised material or to ascertain the efficacy of the selected synthetic method. Processing and interpretation of the obtained research data will lead to a proof of concept for a given reaction, optimised conditions for future experiments or upscaling.
+Das Hauptziel eines synthetischen organischen oder anorganischen Chemikers besteht darin, die gewünschten Verbindungen zu synthetisieren. Dabei werden etablierte Methoden angewandt oder neue Synthesemethoden entwickelt. Ein typischer Arbeitsablauf beginnt mit der Planung der Experimente und Methoden. Anschließend werden die Experimente durchgeführt und die Forschungsdaten sowie die dazugehörigen Metadaten gesammelt. Sobald das Endprodukt vorliegt, wird es mit geeigneten Methoden analysiert, um die Eigenschaften des synthetisierten Materials zu bestimmen oder die Wirksamkeit der gewählten Synthesemethode zu ermitteln. Die Verarbeitung und Interpretation der gewonnenen Forschungsdaten führt zu einem Konzeptnachweis für eine bestimmte Reaktion, zu optimierten Bedingungen für zukünftige Experimente oder zum Upscaling.
 :::
 
-## Type of experiments
+## Arten von Experimenten
 
-- Synthesis: 
-    - Preparation of organic/inorganic substances.
-    - Small-scale experiments for screening/optimisation of reaction conditions.
-    - Upscaling of reactions to obtain sufficient product for comprehensive characterisation or as starting material for subsequent synthesis steps.
+- Synthese: 
+    - Herstellung von organischen/anorganischen Substanzen.
+    - Versuche im kleinen Maßstab zum Screening/Optimierung der Reaktionsbedingungen.
+    - Upscaling von Reaktionen, um genügend Produkt für eine umfassende Charakterisierung oder als Ausgangsmaterial für nachfolgende Syntheseschritte zu erhalten.
 
 
-- Analysis:
-    - Product characterisation with feasible methods (e.g. NMR spectroscopy, mass spectrometry, IR spectroscopy, UV/vis spectroscopy, elemental analysis).
-    - to assess screening/optimisation conditions.
-    - to investigate desired product properties.
-    - to characterise materials’ properties comprehensively.
+- Analyse:
+    - Produktcharakterisierung mit praktikablen Methoden (z. B. NMR-Spektroskopie, Massenspektrometrie, IR-Spektroskopie, UV/vis-Spektroskopie, Elementaranalyse).
+    - Bewertung der Screening-/Optimierungsbedingungen.
+    - um die gewünschten Produkteigenschaften zu untersuchen.
+    - zur umfassenden Charakterisierung der Eigenschaften von Materialien.
 
-## Planning of experiments
+## Planung von Experimenten
 
-- The implementation of newly inspired ideas is supported by previous work stored in the local instance of the electronic lab notebook (e.g. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) of the own research group ([overview of ELNs for synthetic chemists](/docs/eln)), scientific literature or datasets published in [repositories](/docs/repositories) (discipline-specific repositories such as the [Chemotion repository](https://www.chemotion-repository.net/welcome)).
-- Experimental design follows a logical order to achieve a specific goal, such as increasing yield or purity.
-- Planning is concluded by adding the experimental details (e.g. quantities and scheduling procedures). All metadata is documented in an ELN (e.g. Chemotion ELN) including references.
+- Die Umsetzung neu inspirierter Ideen wird durch frühere Arbeiten unterstützt, die in der lokalen Instanz des elektronischen Labornotizbuchs (z. B. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) der eigenen Forschungsgruppe ([Übersicht über ELNs für synthetische Chemiker](/docs/eln)), in wissenschaftlicher Literatur oder in Datensätzen, die in [Repositorien](/docs/repositories) (disziplinspezifischen Repositorien wie dem [Chemotion repository](https://www.chemotion-repository.net/welcome)) veröffentlicht wurden, gespeichert sind.
+- Die Versuchsplanung folgt einer logischen Reihenfolge, um ein bestimmtes Ziel zu erreichen, z. B. die Erhöhung der Ausbeute oder der Reinheit.
+- Die Planung wird durch Hinzufügen der experimentellen Details (z. B. Mengen und Zeitplanverfahren) abgeschlossen. Alle Metadaten werden in einem ELN (z. B. Chemotion ELN) einschließlich Referenzen dokumentiert.
 
-## Documentation of experiments
+## Dokumentation der Experimente
 
-- [Documentation of research data](/docs/data_documentation) and [metadata](/docs/metadata) is carried out digitally using an ELN.
-- Experimental conditions (e.g. solvents, temperature, duration, pressure) are noted in the ELN.
-- Observations and results of analytical methods with no digital output (i.e. no data files) are added manually to the ELN entry of the experiment, which may include appearance, yield, melting point, optical rotation or TLC Rf values (with metadata where applicable).
-- Obtained data from analytical instruments (e.g. NMR, MS or IR data) are uploaded to the Chemotion ELN in open file formats and directly attached to the respective ELN experiment entry including instrumental setup metadata.
-- Metadata related to the obtained data, such as temperature or solvent of measurement, have to be provided according to metadata standards, e.g. x.
+- Die [Dokumentation der Forschungsdaten](/docs/data_documentation) und [Metadaten](/docs/metadata) erfolgt digital über ein ELN.
+- Die Versuchsbedingungen (z. B. Lösungsmittel, Temperatur, Dauer, Druck) werden im ELN notiert.
+- Beobachtungen und Ergebnisse von Analysemethoden ohne digitale Ausgabe (d. h. keine Datendateien) werden dem ELN-Eintrag des Experiments manuell hinzugefügt, was Aussehen, Ausbeute, Schmelzpunkt, optische Drehung oder TLC-Rf-Werte (ggf. mit Metadaten) umfassen kann.
+- Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, MS- oder IR-Daten) werden in offenen Dateiformaten in das Chemotion ELN hochgeladen und direkt an den jeweiligen ELN-Experimenteintrag angehängt, einschließlich der Metadaten zum instrumentellen Setup.
+- Metadaten, die sich auf die erhaltenen Daten beziehen, wie z. B. die Temperatur oder das Lösungsmittel der Messung, müssen gemäß den Metadatenstandards bereitgestellt werden, z. B. x.
 
-## Data producing methods
+## Methoden der Datenerfassung
 
-- Data can be collected during the experiment or after the experiment by analysing the obtained product.
-- Manually determined data: Experimental observations, appearance, yield, melting/boiling point, optical rotation, TLC Rf values, refraction index, etc.
-- Digital data are obtained with analytical devices. An overview on file extensions, file sizes and converters for several analytical methods is given in the table below.
-- Raw data files in [proprietary file formats](/docs/format_standards) should be saved alongside interoperable [open file formats](/docs/format_standards) by using converters or the software of the analytical device. If no specific open format is currently available, export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
+- Daten können während des Versuchs oder nach dem Versuch durch Analyse des gewonnenen Produkts erhoben werden.
+- Manuell ermittelte Daten: Experimentelle Beobachtungen, Aussehen, Ausbeute, Schmelz-/Siedepunkt, optische Drehung, TLC-Rf-Werte, Brechungsindex usw.
+- Digitale Daten werden mit analytischen Geräten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
+- Rohdatendateien in [geschützten Dateiformaten](/docs/format_standards) sollten neben interoperablen [offenen Dateiformaten](/docs/format_standards) mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird der Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten in der Kopfzeile von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich auch in das ELN aufgenommen werden sollten.
 
 <Methods defaultProfile={"synthetic"} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
 
-## Data analysis
+## Datenanalyse
 
-- Research data are processed, analysed and compared (also to data of other experiments) within the Chemotion ELN.
-- Optionally, preprocessing of digital data with software of analytical device before data are transferred to the Chemotion ELN (cf. data producing methods).
-- A detailed view, evaluation and interpretation of results is carried out with the Chemotion ELN features.
+- Forschungsdaten werden im Chemotion ELN bearbeitet, analysiert und verglichen (auch mit Daten anderer Experimente).
+- Optional ist eine Vorverarbeitung der digitalen Daten mit der Software des Analysegerätes möglich, bevor die Daten in das Chemotion ELN übertragen werden (vgl. Datenerstellungsmethoden).
+- Eine detaillierte Ansicht, Auswertung und Interpretation der Ergebnisse erfolgt mit den Funktionen des Chemotion ELN.
 
-## Publication of research data
+## Veröffentlichung von Forschungsdaten
 
-- In addition to a research article in a scientific journal, the underlying research data are published in a repository and linked to the article to realise research data management according to the [FAIR data principles](/docs/fair) ([Best practice examples](/docs/best_practice)).
-- Data publication in a repository includes raw and processed data for reuse.
-- The use of the Chemotion ELN enables a direct transfer of research data and the respective metadata into the Chemotion Repository. Subsequently, these data are automatically shared with other repositories, e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/). For the publication of research data in other discipline-specific repositories, such as the [CCDC](https://www.ccdc.cam.ac.uk/) for crystallographic data, data have to be exported from the Chemotion ELN and uploaded into the respective database.
-- A [persistent identifier](/docs/pid) (e.g. DOI) is generated for a dataset by a repository (via [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
+- Zusätzlich zu einem Forschungsartikel in einer wissenschaftlichen Zeitschrift werden die zugrundeliegenden Forschungsdaten in einem Repositorium veröffentlicht und mit dem Artikel verknüpft, um ein Forschungsdatenmanagement gemäß den [FAIR Datengrundsätzen](/docs/fair) zu verwirklichen ([Best Practice Beispiele](/docs/best_practice)).
+- Die Veröffentlichung von Daten in einem Repository umfasst Rohdaten und verarbeitete Daten zur Wiederverwendung.
+- Die Nutzung des Chemotion ELN ermöglicht einen direkten Transfer von Forschungsdaten und den zugehörigen Metadaten in das Chemotion Repository. Anschließend werden diese Daten automatisch mit anderen Repositorien geteilt, z.B. [PubChem] (https://pubchem.ncbi.nlm.nih.gov/). Für die Veröffentlichung von Forschungsdaten in anderen disziplinspezifischen Repositorien, wie z.B. dem [CCDC](https://www.ccdc.cam.ac.uk/) für kristallographische Daten, müssen die Daten aus dem Chemotion ELN exportiert und in die jeweilige Datenbank hochgeladen werden.
+- Für einen Datensatz wird von einem Repositorium ein [persistenter Identifikator](/docs/pid) (z.B. DOI) generiert (über [DataCite](https://datacite.org/) für das Chemotion-Repositorium), der in der Zeitschriftenpublikation oder entsprechenden Begleitinformationen angegeben wird, um die Datenpublikation mit dem Manuskript zu verknüpfen.
