--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -31,9 +31,7 @@ One main function of repositories is to provide a search function with which use
 
 ## Finding the right repository
 
-Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry such as [Re3data](https://www.re3data.org/) and [FAIRsharing](https://fairsharing.org/). Repository registry services are an essential component of [FAIR](/docs/fair) data as they should help researchers to navigate through thousands of data repository services to find the most appropriate repository for their data. 
-
-DataCite's Repository Finder finds repositories that meet the criteria recommended by the Enabling FAIR Data Project. ROAR and OPENDOAR are directories that list Open Access repositories from all over the world.
+Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry such as [Re3data](https://www.re3data.org/), [OpenDOAR](https://v2.sherpa.ac.uk/opendoar/about.html), [ROAR](http://roar.eprints.org/) and [FAIRsharing](https://fairsharing.org/). Repository registry services are an essential component of [FAIR](/docs/fair) data as they should help researchers to navigate through thousands of data repository services to find the most appropriate repository for their data. 
 
 Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures data users, among other things, that data will be usable, citable and preserved in the long run. 
 
