feat: added quality to CTS

--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -33,7 +33,7 @@ One main function of repositories is to provide a search function with which use
 
 Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry such as [Re3data](https://www.re3data.org/), [OpenDOAR](https://v2.sherpa.ac.uk/opendoar/about.html), [ROAR](http://roar.eprints.org/) and [FAIRsharing](https://fairsharing.org/). Repository registry services are an essential component of [FAIR](/docs/fair) data as they should help researchers to navigate through thousands of data repository services to find the most appropriate repository for their data. 
 
-Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures data users, among other things, that data will be usable, citable and preserved in the long run. 
+Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures that the data is citable, preserved in the long run and may also cover aspects of data curation and data quality. 
 
 <!--- Nowadays more and more peer reviewed journals mandate authors to deposit their data into repositories prior to manuscript submission. If authors do not comply with these rules, the review process is not initiated. -->
 
