--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Repositories"
+title: "Research Data Repositories"
 nfdi4chem-description: storage for preformatted data
 nfdi4chem-id: repositories
 nfdi4chem-tags: [data_organisation, data_storage, repositories]
