chore: proofreading finding repo

--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -8,7 +8,7 @@ slug: "/repositories"
 
 ## Introduction
 
-Repositories are locations where digital objects are stored and made available to the public. They can be regarded as the core of research data sharing as they provide platforms to store, curate, publish, archive, preserve, and access data. Pre-print servers can also be considered as repositories, although these are tailored toward scientific articles rather than research data.
+Research data repositories are locations where digital objects are stored and made available to the public. They can be regarded as the core of research data sharing as they provide platforms to store, curate, publish, archive, preserve, and access data. Pre-print servers can also be considered as repositories, although these are tailored toward scientific articles rather than research data.
 
 Repositories can be classified mainly according to:
 
@@ -29,11 +29,17 @@ In order to allow data re-use by other researchers, [metadata](/docs/metadata) a
 
 One main function of repositories is to provide a search function with which users and machines can find, view and download data. In order to ensure that data are permanently referenced and can be cited, repositories assign unique [persistent identifiers](/docs/pid) (PIDs). This also enhances the findability and accessibility of research data. 
 
+Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures that the data is citable, preserved in the long run and may also cover aspects of data curation and data quality. 
+
 ## Finding the right repository
 
-Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry such as [Re3data](https://www.re3data.org/), [OpenDOAR](https://v2.sherpa.ac.uk/opendoar/about.html), [ROAR](http://roar.eprints.org/) and [FAIRsharing](https://fairsharing.org/). Repository registry services are an essential component of [FAIR](/docs/fair) data as they should help researchers to navigate through thousands of data repository services to find the most appropriate repository for their data. 
+Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry such as [Re3data](https://www.re3data.org/), [OpenDOAR](https://v2.sherpa.ac.uk/opendoar/about.html), [ROAR](http://roar.eprints.org/) and [FAIRsharing](https://fairsharing.org/). Repository registry services are an essential component of [FAIR Data Principles](/docs/fair) as they should help researchers to navigate through thousands of data repository services to find the most appropriate repository for their data. 
 
-Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures that the data is citable, preserved in the long run and may also cover aspects of data curation and data quality. 
+However, due to complex landscape of existing repositories, these registries tend to provide confusingly long lists that do not necessarily facilitate the selection of a suitable repository. 
+
+:::info Info:
+To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a list of trusted, chemistry-friendly repositories.
+:::
 
 ## Repositories for Chemistry
 
