chore: capitalisation of articles

--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -1,9 +1,9 @@
 ---
-title: "How to choose the right repository"
+title: "How to Choose the Right Repository"
 slug: "/choose_repository"
 ---
 
-# How to choose the right repository
+# How to Choose the Right Repository
 
 ## Introduction
 
