feat: removed repo list from repo article

--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -38,10 +38,10 @@ Because of the multitudes of data repositories existing, users could better orie
 However, due to complex landscape of existing repositories, these registries tend to provide confusingly long lists that do not necessarily facilitate the selection of a suitable repository. 
 
 :::info Info:
-To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a list of trusted, chemistry-friendly repositories.
+To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a list of trusted, chemistry-friendly repositories in the article on [How to Find the Right Repository](/docs/choose_repository).
 :::
 
-## Repositories for Chemistry
+<!--- ## Repositories for Chemistry
 
 In the field of synthetic and analytical chemistry, the repository [Chemotion](https://www.chemotion-repository.net/welcome) was developed aiming to fill the existing gap for the preservation and publication of experimental work. Chemotion supports scientists in depositing and sharing data in a structured and transparent way. It is free of charge and its software code is available on GitHub. It uses available standardised identifiers such as the reaction **InChI** (RInChI and RInChIKey). In addition, it is possible to transfer data from an Open Source [Electronic Laboratory Notebook](/docs/eln) (ELN) into the workspace area of the repository. The main advantages of the Chemotion repository are:
 
@@ -71,11 +71,11 @@ In the field of synthetic and analytical chemistry, the repository [Chemotion](h
 - [Zenodo](https://zenodo.org/) General-purpose open-access repository developed under the European OpenAIRE program and operated by CERN
 - [EUDAT CDI](https://www.eudat.eu/) Pan-European network consisting of more than 25 research organisations, data and computing centers
 - [ChemSpider](https://www.chemspider.com/) Free chemical structure database providing fast text and structure search access to over 100 million structures from hundreds of data sources
-- [PubChem](https://pubchem.ncbi.nlm.nih.gov/) Open chemistry database at the National Institutes of Health (NIH)
+- [PubChem](https://pubchem.ncbi.nlm.nih.gov/) Open chemistry database at the National Institutes of Health (NIH) --->
 
 ## Sources and further information
-- https://www.rd-alliance.org/groups/repository-platforms-research-data.html
-- https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository
-- The Repository Chemotion: infrastructure for sustainable research in chemistry<br/>https://doi.org/10.1002/anie.202007702
-- Chemotion ELN: an open source electronic lab notebook for chemists in academia<br/>https://doi.org/10.1186/s13321-017-0240-0
-- German: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
+- [Repository Platforms for Research Data IG](https://www.rd-alliance.org/groups/repository-platforms-research-data.html)
+- [FAIRsFAIR Repository Support Series: Using registries to improve the visibility of your repository service](https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository)
+- [The Repository Chemotion: infrastructure for sustainable research in chemistry](https://doi.org/10.1002/anie.202007702)
+- [Chemotion ELN: an open source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
+- German: [Was ist ein Repositorium? Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
