--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -5,103 +5,111 @@ slug: "/choose_repository"
 
 # How to Choose the Right Repository
 
-## Introduction
+## Introduction to our Recommendations
 
-The consortium for chemistry (NFDI4Chem) in the NFDI aims to support the community members (data producers and users) for collecting, storing, processing, analysing, disclosing and re-using research data by establishing a federation of repositories. In the consortium´s website you can find as an entry point an overview of the selected repositories, the central search service and common standards. 
-Aiming to identify the core repositories that are part of the federation and have potential for development, the TA3-team selected in the proposal the following criteria: 
+The consortium for chemistry (NFDI4Chem) in the NFDI aims to support the researchers for collecting, storing, processing, analysing, publishing and re-using research data by establishing a federation of repositories. Furthermore, we include associated and further relevant trusted chemistry-friendly repositories to ours lists of recommendations. Aiming to identify the **core repositories** that are part of the federation and have potential for development, the TA3 repository team has selected the following criteria: 
 
 - The repository is suitable for the deposition of molecule related data
-- The repository contains reusable data or functionality (such as viewers, editors or analysis tools) that fulfil the needs of the NFDI4Chem community 
+- The repository contains reusable data or functionality such as viewers, editors or analysis tools that fulfil the needs of the NFDI4Chem community 
 - The repository software is open source
 - The operators of the repositories have declared their willingness to adapt their services to the standards developed by NFDI4Chem including the FAIR data principles 
-- The repository operators can be funded in accordance with the funding guidelines of the NFDI (i.e., the main operator is based in Germany and is a non-profit organisation)
+- The repository operators can be funded in accordance with the funding guidelines of the NFDI, i.e. the main operator is based in Germany and is a non-profit organisation.
 
-The repositories that fulfil the above mentioned criteria are reported in the following list as core repositories. In case that not all criteria are fulfilled they are included as associated or relevant repositories: 
+The repositories that fulfil the above mentioned criteria are reported in the following list as **core repositories**. In case that not all criteria are fulfilled they are included as associated or relevant trusted chemistry-friendly repositories.
 
 ## Core Repositories
 
-- [Chemotion Repository](https://www.chemotion-repository.net/welcome) 
-- [MassBank EU](https://massbank.eu/MassBank/) 
-- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/)  
-- [STRENDA DB](https://www.beilstein-strenda-db.org/) 
-- [SUPRABANK](https://suprabank.org/) 
+- [Chemotion Repository](https://www.chemotion-repository.net/welcome)<br></br>Field-specific sample and reaction centric repository including analysis data such as NMR, IR and mass data.
+- [MassBank EU](https://massbank.eu/MassBank/)<br></br>Field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
+- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/)<br></br>Generic, multi-disciplinary repository that offers a free and reliable home for all chemical research data that do not fulfill the specifications of field-specific repositories. 
+- [STRENDA DB](https://www.beilstein-strenda-db.org/)<br></br>Field-specific repository for enzymology data, which incorporates the STRENDA Guidelines for reporting enzymology data.
+- [SUPRABANK](https://suprabank.org/)<br></br>Field-specific repository for intermolecular interactions data.
 
 ## Associated Repositories
 
-- [CSD](https://www.ccdc.cam.ac.uk/structures/), [ICSD](https://icsd.fiz-karlsruhe.de/) and joint [CCDC/FIZ](https://www.ccdc.cam.ac.uk/structures/) Access Structures Service
+- [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/structures/)<br></br>Field-specific repository for x-ray diffraction data of molecules generally containing at least carbon and hydrogen, operated by the Cambridge Crystallographic Data Centre (CCDC)
+- [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/)<br></br>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals and intermetallic compounds, operated by FIZ Karlsruhe
+- [Joint CCDC/FIZ Access Structures Service](https://www.ccdc.cam.ac.uk/structures/)
 
-## Other relevant Repositories
+## Other Relevant Repositories
 
-- [NOMAD](https://nomad-lab.eu/)
+- [NOMAD](https://nomad-lab.eu/)<br></br>Field-specific repository for materials science data.
+- [ioChem-BD](https://www.iochem-bd.org/)<br></br>Field-specific repository for computational chemistry.
+- [RADAR](https://www.radar-service.eu/radar/en/home) Generic, multi-disciplinary research data repository.
+- [Zenodo](https://zenodo.org/)<br></br>Generic repository developed under the European OpenAIRE program, operated by CERN.
+- [EUDAT B2SHARE](https://sp.eudat.eu/catalog/resources/709c053d-3b3f-4c54-8ef4-6efeea387816)<br></br>Gernic repository operated by a pan-european network consisting of more than 25 research organisations, data and computing centers.
 
-## Further repositories (currently in development):
+## Further Repositories (currently in development):
 
 - [nmrXiv](https://docs.nmrxiv.org/) (NMR data)
-- VibSpecDB (Raman and IR spectra)
+- VibSpecDB (IR, Raman, UV/VIS and luminescence data)
 
 Moreover, the consortium supports further databases and data repositories on interoperability issues and encourages them to participate in the development of NFDI4Chem standards and interfaces. 
 Please note: you are free to pledge your dataset to the NFDI4Chem-[survey form](https://docs.google.com/forms/d/e/1FAIpQLSdd_4oNSM0Q4epJwxNU5zthL_0JroGSYl4ILMLR0G1Xo9YbRw/viewform). Support will be provided via a consulting service or more intense data stewardship to assist in publishing your research data. A suitable repository will also be suggested.
 
+:::danger Notice: 
+These lists will be continuously updated ith further recommendations on trusted chemistry-friendly repositories.
+:::
+
 ## Mapping Matrix Data-Repository
 
-Thanks both to the results generated by the [survey](https://doi.org/10.1002/zaac.202000339) of the NFDI4Chem consortium (in 2020) and the interviews with the repository leaders performed by the TA3-team, a list of the most common data types and formats within this community was collected and is reported in Table 1. 
+Based on the results generated by a [survey](https://doi.org/10.1002/zaac.202000339) of the NFDI4Chem consortium in 2020 and the interviews with the repository leaders performed by the TA3 repository team of NFDI4Chem , a list of the most common data types and formats within this community was collected and is reported in Table 1. 
 Table 1 displays which data types are most commonly collected within the chemistry community and suggests which repository is most suitable for storing your specific data type. The recommendations provided in Table 1 will guide you to efficiently and quickly select the best repository for the storage of your data. Selection of the most appropriate database can have a significant impact on findability and citability of the data as well as visibility of the scientist.
 
-**Table 1: Data-types and -formats in the NFDI4Chem community.**
+**Table 1: Data types and data formats in the NFDI4Chem community.**
 
 |Data type|Data format|Suggested Repository|Criteria for selection|
 |:------------|:------------|:------------|:------------|
-|Nuclear Magnetic Resonance|Bruker format (zip), jcamp-dx|[Chemotion](https://www.chemotion-repository.net/welcome)|Passing basic checks, curation|
-|Nuclear Magnetic Resonance|Bruker format, JOEL format NMReData, nmrML,ISA JSON|[nmrXiv](https://docs.nmrxiv.org/)|Validations / Minimum information reporting standards|
-|Molecules and their properties, identification, reactions and experimental investigations|mass spectrometry: jcamp-dx, MzMl, MzXML (open, visualisable and processable), RAW for selected mass data types (processed and converted in JCAMP-dx), IR and Raman: jcamp-dx, XRD: jcamp-dx, UV-VIS: jcamp-dx, Cyclic voltammetry: jcamd-dx. *Chemotion repo offers the option to convert data from different file formats into jcamp-dx.|[Chemotion](https://www.chemotion-repository.net/welcome)|Passing basic checks, curation|
+|Nuclear Magnetic Resonance|Bruker XWIN-NMR format (zip), JCAMP-DX|[Chemotion](https://www.chemotion-repository.net/welcome)|Passing basic checks, curation|
+|Nuclear Magnetic Resonance|Bruker XWIN-NMR format, JOEL format NMReData, nmrML, ISA JSON|[nmrXiv](https://docs.nmrxiv.org/)|Validations / Minimum information reporting standards|
+|Molecules and their properties, identification, reactions and experimental investigations|mass spectrometry: JCAMP-DX, mzMl, mzXML (open, visualisable and processable), RAW for selected mass data types (processed and converted in JCAMP-DX), IR and Raman: JCAMP-DX, XRD: JCAMP-DX, UV/VIS: JCAMP-DX, Cyclic voltammetry: JCAMP-DX. *Chemotion repo offers the option to convert data from different file formats into JCAMP-DX.|[Chemotion](https://www.chemotion-repository.net/welcome)|Passing basic checks, curation|
 |Inorganic crystal structures|Crystallographic Information File (CIF)|[ICSD](https://icsd.fiz-karlsruhe.de/)|Crystal structure data available|
-|Organic and metal-organic crystal structures|Crystallographic Information File (CIF) but other supporting file formats accepted|[CSD](https://www.ccdc.cam.ac.uk/structures/)|Ccell parameters (single crystal), full coordinates (powder), in CIF format|
+|Organic and metal-organic crystal structures|Crystallographic Information File (CIF) but other supporting file formats accepted|[CSD](https://www.ccdc.cam.ac.uk/structures/)|Cell parameters (single crystal), full coordinates (powder), in CIF format|
 |Organic, inorganic and metal-organic crystal structure data|primarily Crystallographic Information File (CIF) but other supporting file formats accepted|[joint CCDC/FIZ Access Structures ServiceD](https://www.ccdc.cam.ac.uk/structures//)|At least one CIF file must be included in the submission and structure factor data for all structures should be provided (if possible)|
 |Simulation|[50 supported codes](https://nomad-lab.eu/prod/v1/gui/about/information)|[NOMAD](https://nomad-lab.eu/)|Simulation data Recognition during upload|
-|Generic data from all disciplines of chemistry, all data that do not fit in the disciplinary repositories|format-independent|[RADAR4Chem](https://www.radar-service.eu/de)|Validation against MD schema|
+|Generic data from all disciplines of chemistry, all data that do not fit in the disciplinary repositories|format-independent|[RADAR4Chem](https://www.radar-service.eu/de)|Validation against metadata schema|
 |Enzyme kinetics data|currently none|[STRENDA DB](https://www.beilstein-strenda-db.org/strenda//)|None; STRENDA compliant, peer-reviewed data publication|
 |Intermolecular and supramolecular interactions of molecular systems|JSON (DataCite), CDX* (for 2D/3D molecule structure), PNG, proprietary formats |[Suprabank](https://suprabank.org/)|Non-judgmental plausibility|
 
+## Brief Description of Repositories
 
-## Summary of the repositories
+A summary from our survey and interviews with operators of repositories with the most relevant information for each repository is reported in the following section.
 
-A summary with the most relevant information for each repository is reported in the following section:
-
-### Chemotion - Repository for molecules and research data
+### Chemotion Repository - Repository for molecules and research data
 
 Quick stats:
 
-- **Accepted data types:** mass spectrometry: jcamp-dx, MzMl, MzXML (open, visualisable and processable), RAW for selected mass data types (processed and converted in JCAMP-dx), NMR: Bruker format (zip) and jcamp-dx, IR and Raman: jcamp-dx, XRD: jcamp-dx, UV-VIS: jcamp-dx, Cyclic voltammetry: jcamd-dx. 
-Chemotion repo offers the option to convert data from different file formats into jcamp-dx.
+- **Accepted data types:** mass spectrometry: JCAMP-DX, mzMl, mzXML (open, visualisable and processable), RAW for selected mass data types (processed and converted in JCAMP-DX), NMR: Bruker XWIN-NMR format (zip) and JCAMP-DX, IR and Raman: JCAMP-DX, XRD: JCAMP-DX, UV-VIS: JCAMP-DX, Cyclic voltammetry: JCAMP-DX. 
+Chemotion repo offers the option to convert data from different file formats into JCAMP-DX.
 - **Used standards/ontologies:** [DataCite Metadata Schema](https://schema.datacite.org/), InChI, SMILES, molfile V2000 and V3000 [CHMO Ontology](http://www.ontobee.org/ontology/CHMO), [RXNO Ontology](http://www.ontobee.org/ontology/RXNO)
-- **Access rights/licence information/embargo:** CC0, CCBY, CCBY-SA; public domain embargo possible (unlimited)
-- **Recommended by Journals/Societies:** in progress
+- **Access rights/licence information/embargo:** CC0, CCBY, CCBY-SA, public domain; embargo period possible (unlimited)
+- **Recommended by Journals/Societies:** Recommended by [Angewandte Chemie](https://onlinelibrary.wiley.com/page/journal/15213773/homepage/notice-to-authors#sectFDataDeposition) and further Wiley journals.
 
 <details>
   <summary>Click to expand for more details about Chemotion!</summary>
   
  <h3>Chemotion - Repository for molecules and research data</h3>
  
- The Chemotion Repository, covers research data that is assigned to molecules, their properties and characterization as well as reactions and experimental investigations. It is hosted at Karlsruhe Institute for Technology (KIT) and is used by several groups in Germany and beyond. Scientists in the domains of molecular and synthetic chemistry are supported in their efforts to handle data in a FAIR manner: the data is stored according to the common practices of scientists assigned to molecules and reactions and the system provides the required <a href="https://www.doi.org/">Digital Object Identifiers</a> (DOIs) without additional effort for the scientist. The given metadata is supported by the implementation of ontology terms. The findability of the data is achieved by text, structure and identifier search options and the submitted samples and their structure are referenced in PubChem for gaining higher visibility of the work for the scientists. The repository is interoperable with the Chemotion ELN which means that data can be transferred from ELN to the repository. Data is curated by <a href="https://www.chemotion-repository.net/home/howto/c40fdb44-8854-46bf-88b3-cc9d6adc3543">automatic checks</a> and a peer reviewing process. The integration of data stored in the repository in publications was shown with several examples and its usage is currently recommended by <a href="https://chemistry-europe.onlinelibrary.wiley.com/journal/26289725">Chemistry methods</a>. Authors can be referenced by <a href="https://orcid.org/">Contributor iD</a> (ORCID iD). Chemists and materials scientists can publish data for open access (data view) and registered access (dataset contribution and download). Stored data can be searched by chemical structure, author, dataset type, status, identifier, and DOI. The current AAI solution is based on an internal user administration (administrator, anonymous and registered user, curator). Metadata according to DataCite is compliant with the <a href="http://www.openarchives.org/pmh/">Open Archives Initiative Protocol for Metadata Harvesting</a> (OAI-PMH) scheme. The Chemotion Repository offers an internal substance register, a spectra viewer (ChemSpectra), a structure editor (Ketcher) and their own data converter.
+ The Chemotion Repository is a field-specific repository and covers research data that is assigned to molecules, their properties and characterization as well as reactions and experimental investigations. It is hosted at Karlsruhe Institute for Technology (KIT) and is used by several groups in Germany and beyond. Scientists in the domains of molecular and synthetic chemistry are supported in their efforts to handle data in a FAIR manner: the data is stored according to the common practices of scientists assigned to molecules and reactions and the system provides the required <a href="https://www.doi.org/">Digital Object Identifiers</a> (DOIs) without additional effort for the scientist. The given metadata is supported by the implementation of ontology terms. The findability of the data is achieved by text, structure and identifier search options and the submitted samples and their structure are referenced in PubChem for gaining higher visibility of the work for the scientists. The repository is interoperable with the Chemotion ELN which means that data can be transferred from ELN to the repository. Data is curated by <a href="https://www.chemotion-repository.net/home/howto/c40fdb44-8854-46bf-88b3-cc9d6adc3543">automatic checks</a> and a peer reviewing process. The integration of data stored in the repository in publications was shown with several examples and its usage is currently recommended by <a href="https://chemistry-europe.onlinelibrary.wiley.com/journal/26289725">Chemistry methods</a>. Authors can be referenced by their <a href="https://orcid.org/">ORCID iDs</a>. Chemists and materials scientists can publish data for open access (data view) and registered access (dataset contribution and download). Stored data can be searched by chemical structure, author, dataset type, status, identifier, and DOI. The current AAI solution is based on an internal user administration (administrator, anonymous and registered user, curator). Metadata according to DataCite is compliant with the <a href="http://www.openarchives.org/pmh/">Open Archives Initiative Protocol for Metadata Harvesting</a> (OAI-PMH) scheme. The Chemotion Repository offers an internal substance register, a spectra viewers (ChemSpectra and NMRium), a structure editor (Ketcher) and their own data converter.
 
 Please note: Chemotion Repository accepts all data types but only few of them can be processed and edited in viewers. 
 </details>
 
-### MassBank EU - High Quality Mass Spectral Database
+### MassBank EU - High Quality Mass Spectral Reference Database
 
 Quick stats:
 
 - **Accepted data types:** MassBank format
 - **Used standards/ontologies:** [Internal MassBank Record Format](https://github.com/MassBank/MassBank-web/blob/main/Documentation/MassBankRecordFormat.md) 
-- **Access rights/licence information/embargo:** Copyright; individual licences based on [creative commons](https://creativecommons.org/); no embargo
-- **Recommended by Journals/Societies:** in progressofficial database of the [Mass Spectrometry Society of Japan](https://www.mssj.jp/index_en.html)
+- **Access rights/licence information/embargo:** Copyright; individual licences based on [creative commons](https://creativecommons.org/); no embargo period
+- **Recommended by Journals/Societies:** in progress, official database of the [Mass Spectrometry Society of Japan](https://www.mssj.jp/index_en.html)
 
 <details>
   <summary>Click to expand for more details about MassBank EU!</summary>
   
- <h3>MassBank EU - High Quality Mass Spectral Database</h3>
+ <h3>MassBank EU - High Quality Mass Spectral Reference Database</h3>
  
-MassBank EU is the first public repository of mass spectral data for sharing them among the scientific research community. Their target user groups in the domains of chemistry and life sciences are analytical chemists, metabolomics, biochemists, and bioinformaticians. Their data sets from community users and projects are openly accessible and represent the official database of the <a href="https://www.mssj.jp/index_en.html">Mass Spectroscopy Society of Japan</a>. GitHub is used as their current AAI environment (open read access, limited write access) whereas <a href="https://github.com/MassBank/MassBank-web/issues">GitHub issues</a> as their curation tracking system. The curation itself is performed by the <a href="https://massbank.github.io/MassBank-documentation/contributor_documentation.html">MassBank record validator</a>. The data sets can be searched for compound and mass spectrometry information and peaks. MassBank Record ID (Accession) and USI (Universal Spectrum Identifier) are used as persistent identifier systems. The MassBank EU spectral data is hosted in a revision control system with all spectral data and the corresponding metadata in a human-readable record format, and continuous integration (CI) checking record integrity for each change. Instances of the web interface are hosted at UFZ and Leibniz Institute of Plant Biochemistry (IPB) (Halle) but can be installed locally as well. They offer interfaces for data import via Git (MassBank record format) and for data export (JSON-LD) and a REST API. On top of that <a href="https://github.com/MassBank/RMassBank">RMassBank</a> is provided as a separated data processing/analysis tool. 
+MassBank EU is a field-specific repository and the first public repository of mass spectral reference data for sharing them among the scientific research community. Their target user groups in the domains of chemistry and life sciences are analytical chemists, metabolomics, biochemists, and bioinformaticians. Datasets from community users and projects are openly accessible and represent the official database of the <a href="https://www.mssj.jp/index_en.html">Mass Spectroscopy Society of Japan</a>. GitHub is used as their current AAI environment (open read access, limited write access) whereas <a href="https://github.com/MassBank/MassBank-web/issues">GitHub issues</a> as their curation tracking system. The curation itself is performed by the <a href="https://massbank.github.io/MassBank-documentation/contributor_documentation.html">MassBank record validator</a>. The data sets can be searched for compound and mass spectrometry information and peaks. MassBank Record ID (Accession) and USI (Universal Spectrum Identifier) are used as persistent identifier systems. The MassBank EU spectral data is hosted in a revision control system with all spectral data and the corresponding metadata in a human-readable record format, and continuous integration (CI) checking record integrity for each change. Instances of the web interface are hosted at Helmholtz Centre for Environmental Research (UFZ) (Leipzig) and Leibniz Institute of Plant Biochemistry (IPB) (Halle) but can be installed locally as well. They offer interfaces for data import via Git (MassBank record format) and for data export (JSON-LD) and a REST API. On top of that <a href="https://github.com/MassBank/RMassBank">RMassBank</a> is provided as a separated data processing/analysis tool. 
 </details>
 
 ### RADAR4Chem - Research Data Repository
@@ -111,7 +119,7 @@ Quick stats:
 - **Accepted data types:** All data types/formats ([format recommendations](https://radar.products.fiz-karlsruhe.de/en/radarabout/dateiformate) exist)
 - **Used standards/ontologies:** [RADAR Metadata Schema](https://radar.products.fiz-karlsruhe.de/en/radarfeatures/radar-metadatenschema) (based on DataCite Metadata Schema 4.0), Dublin Core, schema.org
 - **Access rights/licence information/embargo:** Terms and conditions for both [data providers](https://radar.products.fiz-karlsruhe.de/sites/default/files/radar/docs/License_and_User_Instructions_for_Data_Providers_RADAR4Chem.pdf) and [data users](https://radar.products.fiz-karlsruhe.de/sites/default/files/radar/docs/RADAR_Terms_for_Data_Users.pdf), mandatory licences for datasets (e.g. Creative Commons), embargo period (1-12 months)
-- **Recommended by Journals/Societies:** not yet
+- **Recommended by Journals/Societies:** Recommended by [Angewandte Chemie](https://onlinelibrary.wiley.com/page/journal/15213773/homepage/notice-to-authors#sectFDataDeposition) and further Wiley journals.
 
 <details>
   <summary>Click to expand for more details about RADAR4Chem!</summary>
@@ -129,20 +137,20 @@ RADAR aims to ensure access to and long-term availability of archived and publis
 
 </details>
 
-### STRENDA DB - Standards for Reporting Enzymology Data
+### STRENDA DB - Repository for Reporting Enzymology Data
 
 Quick stats:
 - **Accepted data types:** Currently none, EnzymeML (in development)
 - **Used standards/ontologies:** DataCite, InChI, [EnzymeML (in development)](https://enzymeml.org/)
-- **Access rights/licence information/embargo:** [Creative Commons Attribution 4.0 International (CC BY 4.0)](https://creativecommons.org/licenses/by/4.0/), [Term of Use](https://www.beilstein-strenda-db.org/strenda/termsConditions.xhtml); no embargo
-- **Recommended by Journals/Societies:** [Archives in Biochemistry and Biophysics](https://www.sciencedirect.com/journal/archives-of-biochemistry-and-biophysics), [Beilstein Journal of Organic Chemistry](https://www.beilstein-journals.org/bjoc/home), [eLife](https://elifesciences.org/), [Molecular Catalysis](https://www.sciencedirect.com/journal/molecular-catalysis), [Nature](https://www.nature.com/) (including Biotechnology, Chemistry, Microbiology, Pharmacology, Systems Biology), [PLoS](https://plos.org/) (relevant journals, e.g. One, Biology, Computational Biology, Medicine), [Scientific Data](https://www.nature.com/sdata/), [The Journal of Biological Chemistry](https://www.jbc.org/)
+- **Access rights/licence information/embargo:** [Creative Commons Attribution 4.0 International (CC BY 4.0)](https://creativecommons.org/licenses/by/4.0/), [Term of Use](https://www.beilstein-strenda-db.org/strenda/termsConditions.xhtml); no embargo period possible
+- **Recommended by Journals/Societies:** [Archives in Biochemistry and Biophysics](https://www.sciencedirect.com/journal/archives-of-biochemistry-and-biophysics), [Beilstein Journal of Organic Chemistry](https://www.beilstein-journals.org/bjoc/home), [eLife](https://elifesciences.org/), [Molecular Catalysis](https://www.sciencedirect.com/journal/molecular-catalysis), [Nature](https://www.nature.com/) (including Biotechnology, Chemistry, Microbiology, Pharmacology, Systems Biology), [PLoS](https://plos.org/) (relevant journals, e.g. One, Biology, Computational Biology, Medicine), [Scientific Data](https://www.nature.com/sdata/), [The Journal of Biological Chemistry](https://www.jbc.org/), recommended by [Angewandte Chemie](https://onlinelibrary.wiley.com/page/journal/15213773/homepage/notice-to-authors#sectFDataDeposition) and further Wiley journals.
 
 <details>
   <summary>Click to expand for more details about STRENDA DB!</summary>
   
- <h3>STRENDA DB - Standards for Reporting Enzymology Data</h3>
+ <h3>STRENDA DB - Repository for Reporting Enzymology Data</h3>
  
-STRENDA DB is a repository for enzymology data operated since 2016 and hosted at Beilstein Institute (BI) Frankfurt.  It ensures that data sets are complete and valid before scientists submit them as part of a publication. Their target audience are biochemists, systems biologists, biocatalysts in the fields of life sciences, biological, molecular and food chemists. The typical data contained in this repository consists of functional enzymology data (kinetic and experimental data) from manuscripts and publications. Data entered in the STRENDA DB are automatically checked (according to STRENDA Guidelines and a PDF fact sheet with submittable input data), allowing users to receive notifications for necessary but missing information. Currently, more than <a href="https://www.beilstein-institut.de/en/projects/strenda/journals/">55 international biochemistry journals</a> already include the STRENDA guidelines in their instructions for authors. DOI is used as the identification system for citations and ORCID iD as the identification system for authors. Data viewing is possible via open access and data contribution is possible after a required registration where the current AAI is provided through an internal user administration (user, administrator). 
+STRENDA DB is a field-specific repository for enzymology data operated since 2016 and hosted at Beilstein Institute (BI) Frankfurt. It ensures that data sets are complete and valid before scientists submit them as part of a publication. Their target audience are biochemists, systems biologists, biocatalysts in the fields of life sciences, biological, molecular and food chemists. The typical data contained in this repository consists of functional enzymology data (kinetic and experimental data) from manuscripts and publications. Data entered in the STRENDA DB are automatically checked (according to STRENDA Guidelines and a PDF fact sheet with submittable input data), allowing users to receive notifications for necessary but missing information. Currently, more than <a href="https://www.beilstein-institut.de/en/projects/strenda/journals/">55 international biochemistry journals</a> already include the STRENDA guidelines in their instructions for authors. DOI is used as the identification system for citations and ORCID iD as the identification system for authors. Data viewing is possible via open access and data contribution is possible after a required registration where the current AAI is provided through an internal user administration (user, administrator). 
 </details>
 
 ### SupraBank
@@ -151,8 +159,8 @@ Quick stats:
 
 - **Accepted data types:** JSON (DataCite), CDX (for 2D/3D molecule structure), PNG, proprietary formats
 - **Used standards/ontologies:** DataCite 4.0, Dublin Core for metadata tags
-- **Access rights/licence information/embargo:** CC licences (CC0, BY, BY-SA), embargo possible (unlimited)
-- **Recommended by Journals/Societies:** not yet
+- **Access rights/licence information/embargo:** CC licences (CC0, BY, BY-SA), embargo period possible (unlimited)
+- **Recommended by Journals/Societies:** Recommended by [Angewandte Chemie](https://onlinelibrary.wiley.com/page/journal/15213773/homepage/notice-to-authors#sectFDataDeposition) and further Wiley journals.
 
 <details>
   <summary>Click to expand for more details about SupraBank!</summary>
@@ -170,7 +178,7 @@ ICSD quick stats:
 
 - **Accepted data types:** CIF 
 - **Used standards/ontologies:** none
-- **Access rights/licence information/embargo:** usage terms, no embargo
+- **Access rights/licence information/embargo:** usage terms, no embargo period
 - **Recommended by Journals/Societies:** List of the [80 most important journals](https://icsd.products.fiz-karlsruhe.de/about/list-80-most-important-journals-covered-icsd) covered by ICSD
 
 CSD quick stats:
@@ -203,8 +211,8 @@ Quick stats:
 
 - **Accepted data types:** [50 supported codes](https://nomad-lab.eu/prod/v1/gui/about/information)
 - **Used standards/ontologies:** DataCite; no ontology at the moment (planned to create ontologies for specific parts of the data)
-- **Access rights/licence information/embargo:** CC BY 4.0; Embargoes definable up to 3 years
-- **Recommended by Journals/Societies:** The repository is recommended by [Scientific Data](https://www.nature.com/sdata/policies/repositories#materials)
+- **Access rights/licence information/embargo:** CC BY 4.0; Embargoes period definable up to 3 years
+- **Recommended by Journals/Societies:** The repository is recommended by [Scientific Data](https://www.nature.com/sdata/policies/repositories#materials), recommended by [Angewandte Chemie](https://onlinelibrary.wiley.com/page/journal/15213773/homepage/notice-to-authors#sectFDataDeposition) and further Wiley journals.
 
 <details>
   <summary>Click to expand for more details about NOMAD!</summary>
