chore: another proofreading of repo article

--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -21,11 +21,11 @@ Repositories can be hosted at institutional server or are provided by broader or
 
 ## How do repositories work?
 
-A repository is constituted by a repository software and a database. Researchers transfer their data to the repository typically via a web-based user interface, or the repository operators **harvest** the data from other platforms via appropriate protocols and interfaces.
+A repository is constituted by a repository software and a database. Researchers transfer their data to the repository typically via a browser-based user interface, or the repository operators **harvest** the data from other platforms via appropriate protocols and interfaces.
 
 Some, but not all, repositories curate and review the data before **ingestion**, with regard to their content and quality, and, sometimes, also regarding their legal aspects (copyright, data protection, [licenses](/docs/licenses)).
 
-In order to allow data re-use by other researchers, [metadata](/docs/metadata) are required beside the actual data. Metadata describe the content of the research data and provide information about its creation, the methods or software used as well as legal aspects. Metadata can be either added manually or can be provided through other applications. The process to manually add metadata via a metadata editor can be compared to the process of submitting a manuscript to a publisher via the publishers submission system. 
+In order to allow data reuse by other researchers, [metadata](/docs/metadata) are required beside the actual data. Metadata describe the content of the research data and provide information about its creation, the methods or software used as well as legal aspects. Metadata can be either added manually or can be provided through other applications. The process to manually add metadata via a metadata editor can be compared to the process of submitting a manuscript to a publisher via the publishers submission system. 
 
 One main function of repositories is to provide a search function with which users and machines can find, view and download data. In order to ensure that data are permanently referenced and can be cited, repositories assign unique [persistent identifiers](/docs/pid) (PIDs). This also enhances the findability and accessibility of research data. 
 
@@ -38,7 +38,7 @@ Because of the multitudes of data repositories existing, users could better orie
 However, due to complex landscape of existing repositories, these registries tend to provide confusingly long lists that do not necessarily facilitate the selection of a suitable repository. 
 
 :::info Info:
-To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a list of trusted, chemistry-friendly repositories in the article on [How to Find the Right Repository](/docs/choose_repository).
+To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a lists of trusted, chemistry-friendly repositories in the article on [How to Find the Right Repository](/docs/choose_repository).
 :::
 
 ## Sources and further information
