--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -17,7 +17,7 @@ The consortium for chemistry (NFDI4Chem) in the NFDI aims to support the researc
 - The operators of the repositories have declared their willingness to adapt their services to the standards developed by NFDI4Chem including the FAIR data principles 
 - The repository operators can be funded in accordance with the funding guidelines of the NFDI, i.e. the main operator is based in Germany and is a non-profit organisation.
 
-The repositories that fulfil the above mentioned criteria are reported in the following list as **core repositories**. In case that not all criteria are fulfilled they are included as associated or relevant trusted chemistry-friendly repositories.
+The repositories that fulfil the above mentioned criteria are reported in the following list as **core repositories**. In case that not all criteria are fulfilled they are included as associated or relevant trusted chemistry-friendly repositories. asd
 
 ## Core Repositories
 
@@ -37,9 +37,9 @@ The repositories that fulfil the above mentioned criteria are reported in the fo
 
 - [NOMAD](https://nomad-lab.eu/)<br></br>Field-specific repository for materials science data.
 - [ioChem-BD](https://www.iochem-bd.org/)<br></br>Field-specific repository for computational chemistry.
-- [RADAR](https://www.radar-service.eu/radar/en/home) Generic, multi-disciplinary research data repository.
+- [RADAR](https://www.radar-service.eu/radar/en/home)<br></br>Generic, multi-disciplinary research data repository.
 - [Zenodo](https://zenodo.org/)<br></br>Generic repository developed under the European OpenAIRE program, operated by CERN.
-- [EUDAT B2SHARE](https://sp.eudat.eu/catalog/resources/709c053d-3b3f-4c54-8ef4-6efeea387816)<br></br>Gernic repository operated by a pan-european network consisting of more than 25 research organisations, data and computing centers.
+- [EUDAT B2SHARE](https://sp.eudat.eu/catalog/resources/709c053d-3b3f-4c54-8ef4-6efeea387816)<br></br>Generic repository operated by a pan-european network consisting of more than 25 research organisations, data and computing centers.
 
 ## Further Repositories (currently in development):
 
@@ -49,7 +49,7 @@ The repositories that fulfil the above mentioned criteria are reported in the fo
 Moreover, the consortium supports further databases and data repositories on interoperability issues and encourages them to participate in the development of NFDI4Chem standards and interfaces. 
 
 :::danger Notice: 
-These lists will be continuously updated ith further recommendations on trusted chemistry-friendly repositories.
+These lists will be continuously updated with further recommendations on trusted chemistry-friendly repositories.
 :::
 
 ## Mapping Matrix Data-Repository
